--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div id="Navbar">
-            <img src="Logo.png" alt="logo" id="NavLogo">
+            <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7042b27cf626fc995d3f_NavLogo.png" alt="logo" id="NavLogo">
             <div class="left">
                 <p style="color: #003143;">Work</p>
                 <p>About</p>
@@ -25,7 +25,7 @@
 
     <main>
         <div class="heroImg">
-            <img src="Myimage.png" alt="MyImage" id=MyImage>
+            <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7042d3886ab92af09edd_HeroImg-p-130x130q80.png" alt="MyImage" id=MyImage>
             <div class="content">
                 <h2>Hey there,</h2>
                 <h1>I'm Di'Nasia Berry!</h1>
@@ -37,7 +37,7 @@
                 <button type="button" id="button">More About Me</button>
             </div>
         </div>
-        <img src="downArrow.png" alt="DownArrow" id="Img" height="15px" width="42px">
+        <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b704188adf731d2b2d2be_downArrow.png" alt="DownArrow" id="Img" height="15px" width="42px">
     </main>
 
     <section class="MyWork">
@@ -50,16 +50,16 @@
             </div>
             <div class="column">
                 <div class="container_01">
-                    <img src="CaseStudyOne.png" alt="Aspire" id="Work">
+                    <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7045e014f9b0a9a00c9a_CaseStudyOneDefault-p-130x130q80.png" alt="Aspire" id="Work">
                 </div>
                 <div class="container_02">
-                    <img src="CaseStudyTwo.png" alt="ProBono" id="Work">
+                    <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b704538205ad492d05cd5_CaseStudyThreeDefault-p-130x130q80.png" alt="ProBono" id="Work">
                 </div>
                 <div class="container_03">
-                    <img src="CaseStudyThree.png" alt="EPA" id="Work">
+                    <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b70451b847f6e684f53f4_CaseStudyTwoDefault-p-130x130q80.png" alt="EPA" id="Work">
                 </div>
                 <div class="container_04">
-                    <img src="CaseStudyFour.png" alt="ATH" id="Work">
+                    <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7045572a490b33ce27b1_CaseStudyFourDefault-p-130x130q80.png" alt="ATH" id="Work">
                 </div>
             </div>
         </div>
@@ -74,74 +74,82 @@
                     I’ve created.
                 </p>
             </div>
+            <div class="designOptions">
                 <div class="column">
                     <div class="flex-container_01">
-                        <img src="MobileApps/MobileApps@2x.png" alt="MobileAppsBackground" id="Design">
+                        <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b70432afc3c220c2e05eb_MobileAppsDefault-p-130x130q80.png" alt="MobileAppsBackground" id="Design">
+                        <button type="button" id="button">View More Designs</button>
                     </div>
                     <div class="flex-container_02">
-                        <img src="Websites/Websites@2x.png" alt="WebsitesBackground" id="Design">
+                        <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b70431b847f92a64f53a7_WebsitesDefault-p-130x130q80.png" alt="WebsitesBackground" id="Design">
+                        <button type="button" id="button">View More Designs</button>
                     </div>
                     <div class="flex-container_03">
-                        <img src="Icons/Icons@2x.png" alt="IconsBackground" id="Design">
+                        <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b704305bf3a67af14712a_IconographyDefault-p-130x130q80.png" alt="IconsBackground" id="Design">
+                        <button type="button" id="button">View More Designs</button>
                     </div>
                 </div>
                 <div class="column">
                     <div class="flex-container_04">
-                        <img src="DesktopApps/DesktopApps@2x.png" alt="DesktopAppsBackground" id="Design">
+                        <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7043fb5d85e42bfb8b2c_DesktopAppsDefault-p-130x130q80.png" alt="DesktopAppsBackground" id="Design">
+                        <button type="button" id="button">View More Designs</button>
                     </div>
                     <div class="flex-container_05">
-                        <img src="LandingPage/LandingPage@2x.png" alt="LandingPageBackground" id="Design">
+                        <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7043e014f95626a00c91_LandingPagesDefault-p-130x130q80.png" alt="LandingPageBackground" id="Design">
+                        <button type="button" id="button">View More Designs</button>
                     </div>
                     <div class="flex-container_06">
-                        <img src="Logos/Logos@2x.png" alt="LogosBackground" id="Design">
+                        <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b70424c5ff95ad9c086e7_LogosDefault-p-130x130q80.png" alt="LogosBackground" id="Design">
+                        <button type="button" id="button">View More Designs</button>
                     </div>
                 </div>
-            <div class="content_01">
-                <button type="button" id="button">View More Designs</button>
             </div>
         </div>
     </section>
 
     <section class="MyContact">
-        <div class="Contact">
-            <h2>Let's Get in Touch!</h2>
-            <p>I’d love to share my work with you and answer any questions you may have.<br>You can best reach me here:
-            </p>
-            <ul style="list-style-type: none;">
-                <li><img src="PNG image 37/PNG image 37@2x.png" alt="Email" id="contact">Dinasia.berry50@gmail.com</li>
-                <li><img src="PNG image 38/PNG image 38@2x.png" alt="Phone" id="contact">404-916-2681</li>
-            </ul>
-        </div>
-        <div class="ContactLinks">
-            <h3>Find Me Online</h3>
-            <ul style="list-style-type: none;">
-                <li>My Website</li>
-                <li>www.dinasia.berryportfolio.com</li>
-                <li>My LinkedIn</li>
-                <li>Di'Nasia Berry, UX Designer</li>
-                <li>My Social Media</li>
-                <li>Facebook & Instagram</li>
-            </ul>
+        <div id="row">
+            <div class="Contact">
+                <h2>Let's Get in Touch!</h2>
+                <p>I’d love to share my work with you and answer any questions you may have.
+                </p>
+                <p>You can best reach me here:
+                </p>
+                <ul style="list-style-type: none;">
+                    <li><img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b70429ba5991d32fea6bc_EmailIcon.png" alt="Email" id="contact">Dinasia.berry50@gmail.com</li>
+                    <li><img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b70432afc3c271c2e05ea_PhoneIcon.png" alt="Phone" id="contact">404-916-2681</li>
+                </ul>
+            </div>
+            <div class="ContactLinks">
+                <h3>Find Me Online</h3>
+                <ul style="list-style-type: none;">
+                    <li>My Website</li>
+                    <li id="italic">www.dinasia.berryportfolio.com</li>
+                    <li>My LinkedIn</li>
+                    <li id="italic">Di'Nasia Berry, UX Designer</li>
+                    <li>My Social Media</li>
+                    <li id="italic">Facebook & Instagram</li>
+                </ul>
+            </div>
         </div>
     </section>
 
     <footer>
-        <div id="footer">
             <div class="footerLogo">
-                <img src="Logo.png" alt="logo" id="FootLogo">
+                <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b704205bf3afab6147129_FooterLogo-p-130x130q80.png" alt="logo" id="FootLogo">
                 <p>Copyright 2020</p>
             </div>
-            <div class="top">
-                <p> Work</p>
-                <p>About</p>
+            <div id="footercolumn">
+                <div class="top">
+                    <p> Work</p>
+                    <p>About</p>
+                </div>
+                <div class="bottom">
+                    <p>Design</p>
+                    <p>Resume</p>
+                </div>
             </div>
-            <div class="bottom">
-                <p>Design</p>
-                <p>Resume</p>
-            </div>
-        </div>
     </footer>
-
 </body>
 
 </html>
