--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Di'Nasia Berry's Portfolio</title>
+    <title>Di'Nasia Berry's Portfolio Homepage</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -25,7 +25,9 @@
 
     <main>
         <div class="heroImg">
-            <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7042d3886ab92af09edd_HeroImg-p-130x130q80.png" alt="MyImage" id=MyImage>
+            <div id="MainImg">
+                <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7042d3886ab92af09edd_HeroImg-p-130x130q80.png" alt="MyImage" id=MyImage>
+            </div>
             <div class="content">
                 <h2>Hey there,</h2>
                 <h1>I'm Di'Nasia Berry!</h1>
