--- a/about.html
+++ b/about.html
@@ -9,14 +9,14 @@
 <body>
     <nav>
         <div id="Navbar">
-            <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7042b27cf626fc995d3f_NavLogo.png" alt="logo" id="NavLogo">
+            <img src="images/LogoDesign/LogoDesign@2x.png" alt="logo" id="NavLogo" height="60px" width="60px">
             <div class="left">
-                <p>Work</p>
-                <p style="color: #003143;">About</p>
-                <p>Design</p>
+                <a href="index.html">Work</a>
+                <a style="color: #003143;" href="about.html">About</a>
+                <a href="#">Design</a>
             </div>
             <div class="right">
-                <p>Resume</p>
+                <a href="#">Resume</a>
             </div>
         </div>
     </nav>
@@ -29,15 +29,15 @@
                 <h3>Artist . Problem Solver . User Experience Designer</h3>
             </div>
             <div id="MainImg">
-                <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7042d3886ab92af09edd_HeroImg-p-130x130q80.png" alt="MyImage" id=MyImage>
+                <img src="images/Myimage.png" alt="MyImage" id=MyImage height="349px" width="349px">
             </div>
         </div>
-        <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b704188adf731d2b2d2be_downArrow.png" alt="DownArrow" id="Img" height="15px" width="42px">
+        <img src="images/downArrow.png" alt="DownArrow" id="Img" height="15px" width="42px">
     </main>
 
     <section class="AboutMe">
         <div id="Logo">
-            <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7041fb5d853d02fb8b1c_AboutLogo-p-130x130q80.png" alt="AboutLogo" id="MainLogo">
+            <img src="images/AboutLogo/AboutLogo@2x.png" alt="AboutLogo" id="MainLogo" height="325px" width="325px">
         </div>
         <div id="AboutContent">
             <h2>About Me</h2>
@@ -98,27 +98,27 @@
         <div id="ProjectRow">
             <div id="Column">
                 <div class="container_01">
-                    <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b70419aae7e9385b4bbc7_featureCaseStudyOneDefault-p-130x130q80.png" alt="Aspire" id="Featured">
+                    <img src="images/CaseStudyOne.png" alt="Aspire" id="Featured" height="143px" width="348px">
                     <button type="button" id="button">View Project</button>
                 </div>
                 <div class="container_02">
-                    <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7041572a4980e8ce2798_featureCaseStudyThreeDefault-p-130x130q80.png" alt="EPA" id="Featured">
+                    <img src="images/CaseStudyThree.png" alt="EPA" id="Featured" height="143px" width="348px">
                     <button type="button" id="button">View Project</button>
                 </div>
             </div>
             <div id="Column">
                 <div class="container_03">
-                    <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b704138205a776ed05cd0_featureCaseStudyTwoDefault-p-130x130q80.png" alt="ProBono" id="Featured">
+                    <img src="images/CaseStudyTwo.png" alt="ProBono" id="Featured" height="143px" width="348px">
                     <button type="button" id="button">View Project</button>
                 </div>
                 <div class="container_04">
-                    <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b704138205a8095d05cd1_featureCaseStudyFourDefault-p-130x130q80.png" alt="ATH" id="Featured">
+                    <img src="images/CaseStudyFour.png" alt="ATH" id="Featured" height="143px" width="348px">
                     <button type="button" id="button">View Project</button>
                 </div>
             </div>
         </div>
         <div id="DesignsButton">
-            <img src="#" alt="ViewMoreDesignsButton" id="Design" height="143" width="348">
+            <img src="MoreDesignsButton copy.png" alt="ViewMoreDesignsButton" id="Design" height="143" width="348">
         </div>
     </section>
 
@@ -131,8 +131,8 @@
                 <p>You can best reach me here:
                 </p>
                 <ul style="list-style-type: none;">
-                    <li><img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b70429ba5991d32fea6bc_EmailIcon.png" alt="Email" id="contact">Dinasia.berry50@gmail.com</li>
-                    <li><img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b70432afc3c271c2e05ea_PhoneIcon.png" alt="Phone" id="contact">404-916-2681</li>
+                    <li><img src="images/PNG image 37/PNG image 37@2x.png" alt="Email" id="contact" height="70px" width="70px">Dinasia.berry50@gmail.com</li>
+                    <li><img src="images/PNG image 38/PNG image 38@2x.png" alt="Phone" id="contact" height="70px" width="70px">404-916-2681</li>
                 </ul>
             </div>
             <div class="ContactLinks">
@@ -151,17 +151,17 @@
 
     <footer>
             <div class="footerLogo">
-                <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b704205bf3afab6147129_FooterLogo-p-130x130q80.png" alt="logo" id="FootLogo">
+                <img src="images/AboutLogo/AboutLogo@2x.png" alt="logo" id="FootLogo" height="156px" width="156px">
                 <p>Copyright 2020</p>
             </div>
             <div id="footercolumn">
                 <div class="top">
-                    <p> Work</p>
-                    <p>About</p>
+                    <a href="index.html"> Work</a>
+                    <a href="about.html">About</a>
                 </div>
                 <div class="bottom">
-                    <p>Design</p>
-                    <p>Resume</p>
+                    <a href="#">Design</a>
+                    <a href="#">Resume</a>
                 </div>
             </div>
     </footer>
