--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <nav>
         <div id="Navbar">
-            <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7042b27cf626fc995d3f_NavLogo.png" alt="logo" id="NavLogo">
+            <img src="images/AboutLogo/AboutLogo@2x.png" alt="logo" id="NavLogo" height="60px" width="60px">
             <div class="left">
-                <p style="color: #003143;">Work</p>
-                <p>About</p>
-                <p>Design</p>
+                <a style="color: #003143;" href="index.html" href="index.html">Work</a>
+                <a href="about.html">About</a>
+                <a href="#">Design</a>
             </div>
             <div class="right">
-                <p>Resume</p>
+                <a href="#">Resume</a>
             </div>
         </div>
     </nav>
@@ -26,7 +26,7 @@
     <main>
         <div class="heroImg">
             <div id="MainImg">
-                <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7042d3886ab92af09edd_HeroImg-p-130x130q80.png" alt="MyImage" id=MyImage>
+                <img src="images/Myimage.png" alt="MyImage" id=MyImage height="349px" width="349px">
             </div>
             <div class="content">
                 <h2>Hey there,</h2>
@@ -39,7 +39,7 @@
                 <button type="button" id="button">More About Me</button>
             </div>
         </div>
-        <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b704188adf731d2b2d2be_downArrow.png" alt="DownArrow" id="Img" height="15px" width="42px">
+        <img src="images/downArrow.png" alt="DownArrow" id="Img" height="15px" width="42px">
     </main>
 
     <section class="MyWork">
@@ -52,16 +52,16 @@
             </div>
             <div class="column">
                 <div class="container_01">
-                    <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7045e014f9b0a9a00c9a_CaseStudyOneDefault-p-130x130q80.png" alt="Aspire" id="Work">
+                    <img src="images/CaseStudyOne.png" alt="Aspire" id="Work" height="222px" width="613px">
                 </div>
                 <div class="container_02">
-                    <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b704538205ad492d05cd5_CaseStudyThreeDefault-p-130x130q80.png" alt="ProBono" id="Work">
+                    <img src="images/CaseStudyTwo.png" alt="ProBono" id="Work" height="222px" width="613px">
                 </div>
                 <div class="container_03">
-                    <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b70451b847f6e684f53f4_CaseStudyTwoDefault-p-130x130q80.png" alt="EPA" id="Work">
+                    <img src="images/CaseStudyThree.png" alt="EPA" id="Work" height="222px" width="613px">
                 </div>
                 <div class="container_04">
-                    <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7045572a490b33ce27b1_CaseStudyFourDefault-p-130x130q80.png" alt="ATH" id="Work">
+                    <img src="images/CaseStudyFour.png" alt="ATH" id="Work" height="222px" width="613px">
                 </div>
             </div>
         </div>
@@ -79,29 +79,29 @@
             <div class="designOptions">
                 <div class="column">
                     <div class="flex-container_01">
-                        <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b70432afc3c220c2e05eb_MobileAppsDefault-p-130x130q80.png" alt="MobileAppsBackground" id="Design">
+                        <img src="images/Design_01.png" alt="MobileAppsBackground" id="Design" height="165px" width="294px">
                         <button type="button" id="button">View More Designs</button>
                     </div>
                     <div class="flex-container_02">
-                        <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b70431b847f92a64f53a7_WebsitesDefault-p-130x130q80.png" alt="WebsitesBackground" id="Design">
+                        <img src="images/Design_02.png" alt="WebsitesBackground" id="Design" height="165px" width="294px">
                         <button type="button" id="button">View More Designs</button>
                     </div>
                     <div class="flex-container_03">
-                        <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b704305bf3a67af14712a_IconographyDefault-p-130x130q80.png" alt="IconsBackground" id="Design">
+                        <img src="images/Design_03.png" alt="IconsBackground" id="Design" height="165px" width="294px">
                         <button type="button" id="button">View More Designs</button>
                     </div>
                 </div>
                 <div class="column">
                     <div class="flex-container_04">
-                        <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7043fb5d85e42bfb8b2c_DesktopAppsDefault-p-130x130q80.png" alt="DesktopAppsBackground" id="Design">
+                        <img src="images/Design_011.png" alt="DesktopAppsBackground" id="Design" height="165px" width="294px">
                         <button type="button" id="button">View More Designs</button>
                     </div>
                     <div class="flex-container_05">
-                        <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b7043e014f95626a00c91_LandingPagesDefault-p-130x130q80.png" alt="LandingPageBackground" id="Design">
+                        <img src="images/Design_021.png" alt="LandingPageBackground" id="Design" height="165px" width="294px">
                         <button type="button" id="button">View More Designs</button>
                     </div>
                     <div class="flex-container_06">
-                        <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b70424c5ff95ad9c086e7_LogosDefault-p-130x130q80.png" alt="LogosBackground" id="Design">
+                        <img src="images/Design_031.png" alt="LogosBackground" id="Design" height="165px" width="294px">
                         <button type="button" id="button">View More Designs</button>
                     </div>
                 </div>
@@ -118,8 +118,8 @@
                 <p>You can best reach me here:
                 </p>
                 <ul style="list-style-type: none;">
-                    <li><img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b70429ba5991d32fea6bc_EmailIcon.png" alt="Email" id="contact">Dinasia.berry50@gmail.com</li>
-                    <li><img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b70432afc3c271c2e05ea_PhoneIcon.png" alt="Phone" id="contact">404-916-2681</li>
+                    <li><img src="images/PNG image 37/PNG image 37@2x.png" alt="Email" id="contact" height="70px" width="70px">Dinasia.berry50@gmail.com</li>
+                    <li><img src="images/PNG image 38/PNG image 38@2x.png" alt="Phone" id="contact" height="70px" width="70px">404-916-2681</li>
                 </ul>
             </div>
             <div class="ContactLinks">
@@ -138,17 +138,17 @@
 
     <footer>
             <div class="footerLogo">
-                <img src="https://daks2k3a4ib2z.cloudfront.net/5e9b6c36572a496335ce06dd/5e9b704205bf3afab6147129_FooterLogo-p-130x130q80.png" alt="logo" id="FootLogo">
+                <img src="images/AboutLogo/AboutLogo@2x.png" alt="logo" id="FootLogo" height="156px" width="156px">
                 <p>Copyright 2020</p>
             </div>
             <div id="footercolumn">
                 <div class="top">
-                    <p> Work</p>
-                    <p>About</p>
+                    <a href="index.html"> Work</a>
+                    <a href="about.html">About</a>
                 </div>
                 <div class="bottom">
-                    <p>Design</p>
-                    <p>Resume</p>
+                    <a href="#">Design</a>
+                    <a href="#">Resume</a>
                 </div>
             </div>
     </footer>
