--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="Navbar">
             <img src="images/AboutLogo/AboutLogo@2x.png" alt="logo" id="NavLogo" height="60px" width="60px">
             <div class="left">
-                <a style="color: #003143;" href="index.html" href="index.html">Work</a>
+                <a style="color: #003143;"href="index.html">Work</a>
                 <a href="about.html">About</a>
                 <a href="#">Design</a>
             </div>
